# mit-ai-studio

./: README.md  brew_advice.txt  intro.md  pyproject.toml
knowledge/: user_preference.txt
src/mit_ai_studio/: crew.py  main.py  nanda_bridge.py
src/mit_ai_studio/config/: agents.yaml  tasks.yaml
